# exper-proc-macros

./: Cargo.toml  README.md  build.rs.doesnot-work  main.rs
.cargo/: config.toml
derive-macro/: Cargo.toml  README.md
derive-macro/src/: lib.rs
expr-binary/: Cargo.toml  README.md
expr-binary/src/: lib.rs
proc-macro-derive-describe/: COPYRIGHT.md  Cargo.toml  README.md
proc-macro-derive-using-parse/: Cargo.toml
proc-macro-derive-using-parse/src/: lib.rs
proc-macro-expr-binary/: Cargo.toml  README.md
proc-macro-expr-binary/src/: lib.rs
proc-macro-expr-struct/: Cargo.toml  README.md
proc-macro-expr-struct/src/: lib.rs  main.rs
proc-macro-fsm1/: Cargo.toml
proc-macro-fsm1/src/: lib.rs  main.rs
proc-macro-hsm1/: Cargo.toml  README.md
proc-macro-hsm1/src/: lib.rs  main.rs
proc-macro-nesting/: Cargo.toml  README.md
proc-macro-nesting/src/: lib.rs
proc-macro-verbatim/: Cargo.toml  README.md
proc-macro-verbatim/src/: lib.rs
proc-macro-visit/: Cargo.toml
proc-macro-visit/src/: lib.rs  main.rs
src/: main.rs
verbatim-proc-macro/: Cargo.toml
verbatium-proc-macro/: Cargo.toml  README.md
verbatium-proc-macro/src/: lib.rs
