[package]
name = "expr-proc-macros"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "derive-macro",
    "verbatim-proc-macro",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-macro = { path = "derive-macro" }
verbatim-proc-macro = { path = "verbatim-proc-macro" }
