[package]
name = "expr-proc-macros"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "proc-macro-derive-describe",
    "proc-macro-verbatim",
    "proc-macro-expr-binary",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-derive-describe = { path = "proc-macro-derive-describe" }
proc-macro-verbatim = { path = "proc-macro-verbatim" }
proc-macro-expr-binary = { path = "proc-macro-expr-binary" }
