[package]
name = "expr-proc-macros"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "proc-macro-derive-describe",
    "proc-macro-derive-using-parse",
    "proc-macro-verbatim",
    "proc-macro-expr-binary",
    "proc-macro-nesting",
    "proc-macro-fsm1",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-derive-describe = { path = "proc-macro-derive-describe" }
proc-macro-derive-using-parse = { path = "proc-macro-derive-using-parse" }
proc-macro-verbatim = { path = "proc-macro-verbatim" }
proc-macro-expr-binary = { path = "proc-macro-expr-binary" }
proc-macro-nesting = { path = "proc-macro-nesting" }
proc-macro-fsm1 = { path = "proc-macro-fsm1" }
